--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,51 @@
-/* основные стили */
+/*
+-----------------
+    mobile first макет - макет стилизовался
+    изначально под мобильную верстку и
+    дорабатывался для разрешений побольше.
+-----------------
+ */
+
+/*
+Навигация по строчкам:
+
+    20 - основные стили и типография
+    64 - обобщенные стили для универсальных классов
+    97 - стили header
+    134 - mobile header 
+    187 - тренд-баннеры и ссылки
+    275 - стили main
+    288 - стили для main карточек ( articles )
+    326 - стили aside и карточек
+    358 - секция поиска
+    402 - секция подписки
+    408 - секция тегов
+    434 - секция тем
+    456 - секция продуктов
+    525 - ссылки на фоны продуктов
+    539 - футер и иконки
+            
+    * 580 - media tablet
+    
+    584 - tablet header
+    627 - tablet тренд-баннеры и ссылки
+    643 - tablet стили main
+    664 - tablet aside и карточек
+    674 - tablet секция продуктов
+    689 - tablet ссылки на фоны продуктов
+    
+    * 706 - desktop media
+    
+    712 - desktop header
+    760 - desktop navigation
+    793 - desktop тренд-баннеры и ссылки
+    811 - desktop стили main
+    830 - desktop стили aside и карточек
+    836 - desktop секция продуктов
+    846 - desktop ссылки на фоны продуктов
+*/
+
+/* основные стили и типография */
 * {
     margin: 0;
     padding: 0;
@@ -27,16 +74,32 @@ ul {
     list-style-type: none;
 }
 
-/* обобщенные стили */
+button {
+    height: 50px;
+    border: none;
+    background-color: #b59f5b;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #fff;
+    width: 100%;
+}
+
+button:hover {
+    background-color: #000;
+}
+
+/* обобщенные стили. Уточнения для каждого разрешения - в соответствующих media */
 .title {
     /* общие стили для всех title */
     text-align: center;
     text-transform: uppercase;
 }
 
-.section {
-    /* общие стили для всех section */
-
+.section-main-style {
+    /* общие стили для всех section-main-style */
+    width: 100%;
 }
 
 .section-title {
@@ -44,7 +107,7 @@ ul {
     position: relative;
     margin-top: 40px;
     margin-bottom: 35px;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .section-title:after {
@@ -52,15 +115,69 @@ ul {
     content: '';
     position: absolute;
     bottom: -9px;
-    left: 43%;
+    left: 50%;
+    transform: translateX(-50%);
     height: 3px;
     width: 65px;
     background-color: #e1d9bd;
 }
 
-
-/* header style */
+/* header */
 .header {
+    display: none;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 0;
+}
+
+.header:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #00000099;
+    z-index: -1;
+}
+
+.container {
+    padding: 0 15px;
+    width: 100%;
+}
+
+.no-mobile-navigation {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.header-title {
+    color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* mobile header style */
+.mob-header a {
+    display: block;
+    width: 269px;
+    height: 61px;
+}
+
+svg {
+    position: absolute;
+    top: 36px;
+    right: 16px;
+    width: 23px;
+}
+
+.mobile-navigation a {
+    margin-bottom: 45px;
+}
+
+.mob-header {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -72,60 +189,28 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     min-height: 100vh;
-    z-index: 0;
+    z-index: -2;
 }
 
-.header:after {
+.mob-header:after {
     content: '';
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #00000070;
+    background-color: #00000099;
     z-index: -1;
 }
 
-.burger {
-    position: absolute;
-    top: 36px;
-    right: 16px;
-    width: 23px;
-}
-
-.burger span {
-    display: block;
-    width: 23px;
-    height: 3px;
-    margin-bottom: 5px;
-    background-color: #fff;
-}
-
-.burger span:last-child {
-    margin: 0;
-}
-
-.header-logo-image {
-    width: 269px;
-    height: 61px;
-    margin-bottom: 45px;
-}
-
-.header-title {
+.mob-header .header-title {
     width: 328px;
     font-size: 26px;
     color: #fff;
     line-height: 36px;
     padding: 0 15px;
-}
-
-/* header style end */
-
-/* trends style */
-.wrap-trends-banner {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* banner url */
@@ -145,10 +230,25 @@ ul {
     background-image: url("../images/trend4.jpg");
 }
 
+/* trends style */
+.trends-title {
+    font-size: 16px;
+}
+
+.wrap-trends-banner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3px;
+}
+
 .trends-banner {
     position: relative;
+    display: flex;
+    align-items: flex-end;
     width: 100%;
-    padding: 18% 15px 15px 15px;
+    height: 230px;
+    padding: 15px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -168,51 +268,591 @@ ul {
 }
 
 .tr-content {
+    width: 100%;
     border: 3px solid #b59f5b99;
     padding-left: 23px;
-    padding-right: 23px;
     padding-top: 35px;
     padding-bottom: 30px;
 }
 
-.tr-tags-list {
+.tags-list {
     display: flex;
-    margin-bottom: 13px;
-}
-
-.tr-items a {
-    color: #b59f5b;
+    margin: 16px 0px;
+    gap: 20px;
     text-transform: uppercase;
-    margin-right: 20px;
 }
 
-.tr-items a:hover {
+.tag-item a {
+    color: #b59f5b;
+}
+
+.tag-item a:hover {
     text-decoration: underline;
 }
 
-.tr-title {
+.tr-content .article-title a {
+    text-transform: uppercase;
     color: #fff;
     line-height: 20px;
-    text-transform: uppercase;
     font-size: 16px;
 }
 
-.tr-title:hover {
+.tr-content .article-title a:hover {
     color: #b59f5b;
 }
 
-.desk {
-    display: none;
+/* main style */
+.main-container {
+    margin-top: 45px;
 }
 
-@media ( min-width: 481px ) {
-    .page {
+.main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+/* main article style */
+.main-article img {
+    width: 100%;
+}
+
+.article .article-title a {
+    text-transform: uppercase;
+    color: #000;
+}
+
+.article .article-title a:hover {
+    color: #b59f5b;
+}
+
+.main-article {
+    padding-bottom: 20px;
+    border-bottom: 3px solid #eeeeee;
+}
+
+.meta-items {
+    display: flex;
+    gap: 15px;
+    font-size: 12px;
+    padding: 35px 0px;
+}
+
+.meta-items .time {
+    color: #888888;
+    font-weight: normal;
+}
+
+.article-text {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: normal;
+}
+
+/* aside style */
+.aside {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    width: 60%;
+}
+
+/* aside article style */
+.aside-article {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.aside-article img {
+    margin-right: 20px;
+    width: 70px;
+    height: 70px;
+}
+
+.article-content h4 {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.post-time {
+    font-size: 12px;
+    color: #888888;
+}
+
+/* search form */
+input {
+    outline: 0px;
+    width: 100%;
+    border: none;
+    background-color: #f4f7f6;
+    height: 50px;
+    padding: 20px;
+}
+
+.search-form {
+    position: relative;
+    margin-top: 52px;
+}
+
+.input-label-area:focus {
+    border: 1px solid #b59f5b;
+}
+
+.search-form button {
+    width: 50px;
+    background-image: url("../svg/search.svg");
+    background-size: 18px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding: 15px;
+    box-sizing: border-box;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
+
+/* follow form */
+.follow-form button {
+    margin-top: 17px;
+}
+
+/* tags section */
+.tags-section li {
+    display: inline-block;
+}
+
+.tags-section .tag-item {
+    display: inline-block;
+    padding: 10px;
+    border: 3px solid #f4f3f1;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    color: #000;
+}
+
+.tags-section .tag-item:hover {
+    border: 3px solid #b59f5b;
+}
+
+.tags-section .tags-item:last-child {
+    margin: 0;
+}
+
+/* theme section */
+.theme-item {
+    font-weight: bold;
+    font-size: 14px;
+    padding-bottom: 14px;
+    border-bottom: 1px solid #eee;
+    color: #000;
+    display: block;
+}
+
+.theme-item:hover {
+    color: #b59f5b;
+}
+
+.theme-item span {
+    font-size: 13px;
+    vertical-align: super;
+    color: #b59f5b;
+}
+
+/* product section */
+
+.product-section {
+    padding: 0 15px;
+}
+
+.product-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: space-between;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+.product-bordered {
+    border: 3px solid #b59f5b;
+    padding: 25px 25px 25px 25px;
+}
+
+.product-image {
+    width: calc(100% - 40px);
+    height: calc(285px + 98px);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: -35px;
+}
+
+.product-title {
+    text-transform: uppercase;
+    margin-top: 25px;
+    font-size: 17px;
+    line-height: 22px;
+}
+
+.product-description {
+    font-weight: normal;
+}
+
+.product-description a {
+    color: #b59f5b;
+    text-transform: lowercase;
+    font-weight: inherit;
+    margin-top: 15px;
+}
+
+.price-items {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.sale {
+    width: 100%;
+}
+
+.sale-price {
+    text-decoration: line-through;
+}
+
+/* product images bg link - mobile */
+.image-1 {
+    background-image: url("../images/shop-item-mobile1.jpg");
+}
+
+.image-2 {
+    background-image: url("../images/shop-item-mobile2.jpg");
+}
+
+.image-3 {
+    background-image: url("../images/shop-item-mobile3.jpg");
+}
+
+/* footer */
+.socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    height: 80px;
+    margin-top: 45px;
+    background-color: #f4f7f6;
+}
+
+.social-link {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    position: relative;
+}
+
+.social-dribbble {
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/001-dribbble.svg");
+}
+
+.social-pinterest {
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/002-pinterest.svg");
+}
+
+.social-tamblr {
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg");
+}
+
+.copyright {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 40px;
+    color: #999;
+}
+
+/* tablet media */
+@media (min-width: 768px) {
+
+    /* header */
+    .mob-header {
         display: none;
     }
-    .desk {
+
+    .navigation {
+        display: none;
+    }
+
+    svg {
+        top: 56px;
+        right: 36px;
+    }
+
+    .header {
         display: block;
-        text-align: center;
-        padding-top: 25%;
-        opacity: 0.5;
+        background-image: url("../images/banner-bg-tablet.jpg");
+    }
+
+    .header .container {
+        min-height: 400px;
+        padding-top: 46px;
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+
+    .container {
+        padding: 0 35px;
+    }
+
+    .header a {
+        width: 158px;
+        height: 36px;
+    }
+
+    .header-title {
+        padding-top: 103px;
+        width: 611px;
+        font-size: 40px;
+        line-height: 55px;
+    }
+
+    /* trend banner */
+    .trends-title {
+        font-size: 18px;
+    }
+
+    .trends-banner {
+        width: calc(50% - 2px);
+        height: 245px;
+    }
+
+    .tr-content {
+        padding-left: 33px;
+    }
+
+    /* main */
+    .main-container {
+        display: flex;
+    }
+
+    .main {
+        margin-right: 35px;
+    }
+
+    .article-text {
+        font-size: 15px;
+    }
+
+    .main-article:last-child {
+        border: none;
+    }
+
+    /* aside */
+    .aside {
+        width: 75%;
+    }
+
+    .last-post-section h4 {
+        margin-top: 0px;
+    }
+
+    /* product */
+    .product {
+        width: calc(50% - 13px);
+    }
+
+    .product-image {
+        width: calc(100% - 40px);
+        height: calc(227px + 13px);
+    }
+
+    .product-bordered {
+        height: 265px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* product images bg link - tablet */
+    .image-1 {
+        background-image: url("../images/shop-item-tablet1.jpg");
+    }
+
+    .image-2 {
+        background-image: url("../images/shop-item-tablet2.jpg");
+    }
+
+    .image-3 {
+        background-image: url("../images/shop-item-tablet3.jpg");
+    }
+}
+
+/* desktop media */
+@media (min-width: 1024px) {
+    
+    /* header */
+    .mob-header {
+        display: none;
+    }
+
+    .no-mobile-navigation {
+        display: flex;
+        width: 100%;
+    }
+
+    .navigation {
+        display: block;
+    }
+
+    .header svg {
+        display: none;
+    }
+
+    .header {
+        display: block;
+        background-image: url("../images/banner-bg.jpg");
+    }
+
+    .header .container {
+        min-height: 450px;
+        padding-top: 29px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .container {
+        max-width: 1200px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .header a {
+        width: 179px;
+        height: 41px;
+    }
+
+    .header-title {
+        padding-top: 126px;
+        width: 688px;
+        font-size: 45px;
+        line-height: 75px;
+    }
+
+    /* navigation */
+    .nav-items {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav-list {
+        display: flex;
+        font-size: 13px;
+    }
+
+    .nav-list li {
+        margin-right: 35px;
+    }
+
+    .nav-list li:last-child {
+        margin: 0;
+    }
+
+    .nav-list li a {
+        font-weight: normal;
+        text-transform: uppercase;
+        color: #fff;
+        opacity: .8;
+    }
+
+    .nav-list li a:hover {
+        opacity: 1;
+        text-decoration: underline;
+    }
+
+    /* trend banners */
+    .trends-title {
+        font-size: 20px;
+    }
+
+    .wrap-trends-banner {
+        flex-wrap: nowrap;
+    }
+
+    .trends-banner {
+        height: 320px;
+    }
+
+    .tr-content {
+        padding-left: 36px;
+    }
+
+    /* main */
+    .main {
+        margin-right: 120px;
+        width: 100%;
+    }
+
+    .main-article {
+        display: flex;
+        border: none;
+    }
+
+    .main-article .article-image {
+        height: 294px;
+        min-width: 381px;
+        margin-right: 30px;
+    }
+
+    /* aside style */
+    .aside {
+        width: 40%;
+    }
+
+    /* product */
+    .product {
+        width: calc(33% - 14px);
+    }
+
+    .product-image {
+        width: calc(100% - 40px);
+        height: calc(204px + 13px);
+    }
+
+    /* product images bg link - desktop */
+    .image-1 {
+        background-image: url("../images/shop-item-desk1.jpg");
+    }
+
+    .image-2 {
+        background-image: url("../images/shop-item-desk2.jpg");
+    }
+
+    .image-3 {
+        background-image: url("../images/shop-item-desk3.jpg");
     }
 }
