--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
     20 - основные стили и типография
     64 - обобщенные стили для универсальных классов
     97 - стили header
-    134 - mobile header 
+    134 - mobile header
     187 - тренд-баннеры и ссылки
     275 - стили main
     288 - стили для main карточек ( articles )
@@ -24,18 +24,18 @@
     456 - секция продуктов
     525 - ссылки на фоны продуктов
     539 - футер и иконки
-            
+
     * 580 - media tablet
-    
+
     584 - tablet header
     627 - tablet тренд-баннеры и ссылки
     643 - tablet стили main
     664 - tablet aside и карточек
     674 - tablet секция продуктов
     689 - tablet ссылки на фоны продуктов
-    
+
     * 706 - desktop media
-    
+
     712 - desktop header
     760 - desktop navigation
     793 - desktop тренд-баннеры и ссылки
@@ -501,8 +501,8 @@ input {
 }
 
 .product-image {
-    width: calc(100% - 40px);
-    height: calc(285px + 128px);
+    width: 285px;
+    height: 285px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -687,8 +687,8 @@ input {
     }
 
     .product-image {
-        width: calc(100% - 40px);
-        height: calc(227px + 13px);
+        width: 292px;
+        height: 227px;
     }
 
     .product-bordered {
@@ -713,7 +713,7 @@ input {
 
 /* desktop media */
 @media (min-width: 1024px) {
-    
+
     /* header */
     .mob-header {
         display: none;
@@ -839,8 +839,8 @@ input {
     }
 
     .product-image {
-        width: calc(100% - 40px);
-        height: calc(204px + 13px);
+        width: 300px;
+        height: 204px;
     }
 
     /* product images bg link - desktop */
