--- a/css/main.css
+++ b/css/main.css
@@ -96,11 +96,12 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 32px;
+    margin-bottom: 33px;
     width: 100%;
     min-height: 640px;
-    background-image: url("https://github.com/netology-code/mq-diploma/blob/master/sources/img/banner-mobile.jpg?raw=true");
+    background-image: url("../images/banner-mobile.jpg");
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     position: relative;
     z-index: 0;
@@ -174,14 +175,17 @@ a {
     display: flex;
     flex-direction: column;
     margin-top: 32px;
+    gap: 2px;
 }
 
 .trends-banner {
+    position: relative;
+    display: flex;
     min-height: 232px;
     padding: 15px 17px 15px 14px;
-    display: flex;
-    margin-bottom: 2px;
-    position: relative;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     z-index: 0;
 }
 
@@ -258,7 +262,7 @@ a {
 }
 
 .main-article img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .main-article ul li a:hover {
@@ -297,9 +301,6 @@ a {
 
 /* aside */
 
-.aside {
-
-}
 
 /* aside > Last post section */
 
@@ -504,7 +505,7 @@ a {
 .sale {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     width: 100%;
 }
 
@@ -531,15 +532,15 @@ a {
 /* Подвал */
 
 .footer {
-    margin-top: 50px;
+    margin-top: 40px;
     padding: 0px 15px;
 }
 
-/* Подвал > Фон */
+/* Подвал > ссылки */
 .socials {
     display: flex;
     justify-content: center;
-    padding: 23px;
+    padding: 30px;
     gap: 25px;
     background-color: #f4f7f6;
 }
@@ -569,26 +570,405 @@ a {
     display: block;
     color: #999;
     font-size: 1.1em;
-    margin: 50px 0px;
+    margin: 45px 0px;
     text-align: center;
 }
 
-
-@media (min-width: 768px) {
+@media ( min-width: 360px ) and ( orientation: landscape ) {
     .wrap-trends-banner {
         flex-direction: row;
         flex-wrap: wrap;
     }
 
     .trends-banner {
-
+        width: calc(50% - 2px);
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
+
+    .header {
+        flex-direction: column;
+        min-height: 392px;
+        background-image: url("../images/banner-bg-tablet.jpg");
+        margin-bottom: 44px;
+    }
+
+    .header.container {
+        padding: 43px 35px 0px 35px;
+    }
+
+    .header a {
+        width: 158px;
+        align-self: baseline;
+        margin-top: 0px;
+    }
+
+    .header-burger {
+        top: 47px;
+        right: 31px;
+    }
+
+    .header-title {
+        margin-right: auto;
+        margin-left: auto;
+        font-size: 41px;
+        line-height: 54px;
+        letter-spacing: -1px;
+        padding: 88px 0px;
+        width: 89%;
+    }
+
+    /* Тренды > Заголовок */
+    .section-title {
+        font-size: 1.8rem;
+        margin-bottom: 28px;
+    }
+
+    .wrap-trends-banner {
+        margin-top: 0px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 4px;
+    }
+
+    .trends-banner {
+        padding: 15px 20px 15px 20px;
+        width: calc(50% - 2px);
+        min-height: 246px;
+    }
+
+    .tr-content {
+        padding: 35px 45px 30px 32px;
+    }
+
+    /* Main */
+    .main-container {
+        display: flex;
+        margin-top: 52px;
+        padding: 0px 35px;
+    }
+
+    .main {
+        min-width: 56%;
+        margin-right: 5%;
+    }
+
+    /* Main > article */
+    .main-article {
+        margin-bottom: 41px;
+        padding-bottom: 18px;
+        border-bottom: 3px solid #eee;
+    }
+
+    .article-title a {
+        line-height: 22px;
+    }
+
+    .article-content > .article-text {
+        margin-bottom: 15px;
+    }
+
+    .article-content > .article-text:last-child {
+        margin-bottom: 0px;
+    }
+
+    .meta-items p {
+        font-size: 1.2rem;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    /*  aside  */
+    .aside {
+        width: 270px;
+        flex-shrink: 0;
+    }
+
+    .aside .section-title {
+        font-size: 1.4rem;
+    }
+
+    .section-main-style:first-child {
+        margin-top: 0px;
+    }
+
+    /* Рассылка Email */
+    .follow-section {
+        margin-top: 53px;
+    }
+
+    /* Теги */
+    .tags-section {
+        margin-top: 57px;
+    }
+
+    .tags-section > ul {
+        padding-top: 7px;
+        gap: 12px;
+    }
+
+    .tags-section > ul li {
+        padding: 1px 12px;
+    }
+
+    .tags-section a {
+        font-size: 1em;
+    }
+
+    /* Темы */
+    .themes-section {
+        margin-top: 56px;
+    }
+
+    /* Товары */
+    .product-section {
+        margin-top: 1px;
+    }
+
+    .product-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        padding: 10px 20px;
+    }
+
+    .product {
+        width: calc(50% - 10px);
+        margin-bottom: 0px;
+    }
+
+    /* Товары > Фон */
+    .product-image {
+        max-width: 86%;
+        min-height: 227px;
+    }
+
+    .product:last-child .product-bordered {
+        min-height: 246px;
+    }
+
+    .image-1 {
+        background-image: url("../images/shop-item-tablet1.jpg");
+    }
+
+    .image-2 {
+        background-image: url("../images/shop-item-tablet2.jpg");
+    }
+
+    .image-3 {
+        background-image: url("../images/shop-item-tablet3.jpg");
+    }
+
+    /* Товар > Описание */
+    .product-bordered {
+        margin-top: -33px;
+        padding: 32px 19px;
+        min-height: 264px;
+    }
+
+    /* Подвал */
+    .footer {
+        padding: 0px 35px;
+    }
 
 }
 
-@media (min-width: 166px) {
+@media (min-width: 1200px) {
+    .header {
+        background-image: url("../images/banner-bg.jpg");
+        min-height: 449px;
+        position: relative;
+        margin-bottom: 57px;
+    }
 
+    .header.container {
+        padding: 29px 15%;
+    }
+
+    .header-burger {
+        display: none;
+    }
+
+    .header a {
+        width: 178px;
+    }
+
+    .navigation {
+        display: block;
+        position: absolute;
+        top: 40px;
+        right: 14.7%;
+        font-size: 1.3rem;
+    }
+
+    .navigation a {
+        font-weight: normal;
+        color: #fff;
+    }
+
+    .navigation ul {
+        display: flex;
+        gap: 35px;
+    }
+
+    .navigation a:hover {
+        text-decoration: underline;
+    }
+
+    .nav-list {
+        display: flex;
+    }
+
+    .header-title {
+        width: 730px;
+        font-size: 45px;
+        line-height: 75px;
+        letter-spacing: 0px;
+        padding: 99px 0px;
+    }
+
+    .section-title {
+        font-size: 2rem;
+        margin-bottom: 40px;
+    }
+
+    .trends-banner {
+        width: calc(25% - 3px);
+        min-height: 320px;
+        padding: 20px;
+    }
+
+    .tr-content {
+        padding: 33px;
+    }
+
+    .tr-content .article-title a {
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+
+    /* Main */
+    .main-container {
+        max-width: 1200px;
+        margin-top: 63px;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 0px 15px;
+    }
+
+    .main {
+        min-width: 56%;
+        margin-right: 120px;
+    }
+
+    /* Main > article */
+    .main-article {
+        display: flex;
+    }
+
+    /* Main > article */
+    .main-article {
+        margin-bottom: 39px;
+    }
+
+    .main-article img {
+        width: 100%;
+        max-width: 381px;
+        min-width: 381px;
+        min-height: 294px;
+        margin-right: 30px;
+    }
+
+    .main-article > .article-content {
+        margin: 0;
+    }
+
+    .main-article .tags-list {
+        margin-bottom: 7px;
+    }
+
+    .article-title a {
+        font-size: 20px;
+    }
+
+    .meta-items p {
+        margin-top: 32px;
+        margin-bottom: 45px;
+    }
+
+    .article-text {
+        font-size: 1.5rem;
+        line-height: 20px;
+    }
+
+    /* aside */
+    .aside .section-title {
+        margin-bottom: 28px;
+    }
+
+    /* Рассылка Email */
+    .follow-section {
+        margin-top: 53px;
+    }
+
+    .aside .follow-section h4 {
+        margin-bottom: 33px;
+    }
+
+    /* Теги */
+    .tags-section {
+        margin-top: 53px;
+    }
+
+    /* Товары */
+    .product-wrapper {
+        gap: 65px;
+        justify-content: center;
+    }
+
+    .product {
+        width: calc(25% - 51px);
+    }
+
+    .product-section > h4 {
+        margin-bottom: 28px;
+    }
+
+    /* Товары > Фон */
+    .product-image {
+        min-height: 205px;
+    }
+
+    .image-1 {
+        background-image: url("../images/shop-item-desk1.jpg");
+    }
+
+    .image-2 {
+        background-image: url("../images/shop-item-desk2.jpg");
+    }
+
+    .image-3 {
+        background-image: url("../images/shop-item-desk3.jpg");
+    }
+
+    /* Товар > Описание */
+    .product-title {
+        font-size: 2em;
+        margin-top: 17px;
+    }
+
+    .product:last-child .product-bordered {
+        min-height: 266px;
+    }
+
+    /* Подвал */
+    .footer {
+        margin-top: 53px;
+    }
+
+    .copyright {
+        margin: 70px 0px;
+    }
 }
