--- a/css/main.css
+++ b/css/main.css
@@ -574,6 +574,165 @@ a {
     text-align: center;
 }
 
+/* Фидбэк */
+
+.feedback {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0009;
+}
+
+.fb-form {
+    position: absolute;
+    padding: 50px 30px;
+    top: 50%;
+    left: 50%;
+    width: 90%;
+    max-width: 400px;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+}
+
+.fb-select-items {
+    width: 100%;
+    height: 50px;
+    font-weight: normal;
+    border: none;
+    background-color: #f4f7f6;
+    background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/svg/form-arrows.svg");
+    background-size: 14px;
+    background-position: center right 15px;
+    background-repeat: no-repeat;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    outline: 0px;
+}
+
+.select-item {
+    font-weight: normal;
+}
+
+.fb-title {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.done-radio {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    height: 1px;
+    width: 1px;
+}
+
+.done-radio-label:before {
+    content: '';
+    display: inline-block;
+    background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/svg/form-empty-circle.svg");
+    width: 18px;
+    height: 18px;
+    background-size: 18px;
+    margin-right: 5px;
+}
+
+.done-radio:focus + .done-radio-label:before {
+    background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/svg/form-circle.svg");
+}
+
+.done-radio-label {
+    font-size: 1.8rem;
+    font-weight: normal;
+    margin-right: 10px;
+}
+
+.feedback p {
+    font-weight: normal;
+    font-size: 1.8rem;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+.fb-textField textarea {
+    width: 100%;
+    height: 100px;
+    padding: 15px;
+    background-color: #f4f7f6;
+    color: #888;
+    border: none;
+    outline: 0px;
+}
+
+.fb-textField textarea:focus {
+    border: 1px solid var(--main-color);
+}
+
+.fb-textField textarea::placeholder {
+    font-weight: normal;
+}
+
+.fb-submit {
+    width: 100%;
+    height: 50px;
+    border: none;
+    background: var(--main-color);
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.fb-submit:hover {
+    background-color: #000;
+}
+
+.fb-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-image: url(../svg/form-x.svg);
+    background-color: var(--main-color);
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.fb-close:hover {
+    background-color: #777;
+}
+
+.openFeedback {
+    position: absolute;
+    top: 0;
+    right: 50%;
+    transform: translate(50%, 50%);
+}
+
+.openFeedback > button {
+    width: 100px;
+    height: 40px;
+    border: 1px solid var(--main-color);
+    background: none;
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    opacity: .8;
+}
+
+.openFeedback > button:hover {
+    opacity: 1;
+}
+
 @media ( min-width: 360px ) and ( orientation: landscape ) {
     .wrap-trends-banner {
         flex-direction: row;
@@ -772,6 +931,10 @@ a {
         padding: 0px 35px;
     }
 
+    /* Фидбек   */
+    .openFeedback {
+        transform: translate(50%, 100%);
+    }
 }
 
 @media (min-width: 1200px) {
