--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ html {
 @font-face {
     font-family: OpenSans;
     src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
-    font-family: OpenSans;
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -31,7 +30,6 @@ html {
 @font-face {
     font-family: OpenSans;
     src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
-    font-family: OpenSans;
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -68,7 +66,7 @@ button:hover {
     padding: 0;
     white-space: nowrap;
     clip-path: inset(100%);
-    clip: rect(0 0 0 0);
+    clip: rect(0px, 0px, 0px, 0px);
     overflow: hidden;
 }
 
@@ -584,6 +582,7 @@ a {
     width: 100vw;
     height: 100vh;
     background-color: #0009;
+    z-index: 1;
 }
 
 .fb-form {
@@ -649,7 +648,8 @@ a {
     margin-right: 10px;
 }
 
-.feedback p {
+.feedback span {
+    display: block;
     font-weight: normal;
     font-size: 1.8rem;
     margin-top: 20px;
